--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,7 @@ services:
       ports:
         - "9292:9292"
       environment:
-        POSTGRES_USER: postgres
-        POSTGRES_DBNAME: omnicola
-        POSTGRES_HOST: omnicola.postgres
-        POSTGRES_PORT: 5432
+        DATABASE_URL: postgres://postgres@omnicola.postgres:5432/omnicola 
       container_name: omnicola.app
       tty: true
       networks:
